log/build_2024-06-12_09-57-41/adhoc/stderr.log
  File "/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py", line 187
    self.audio_frames = [(ad, ts) for ad, ts if ts > self.last_save_time + self.interval]
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression

